tests/snapshots/responses_test__responses_inbound_to_openai_chat_channel.snap
---
source: tests/responses_test.rs
expression: "json!({ \"downstream_response\": body, \"upstream_request\": received[0], })"
---
{
  "downstream_response": {
    "id": "chatcmpl-123",
    "model": "gpt-4o",
    "object": "response",
    "output": [
      {
        "content": [
          {
            "annotations": [],
            "text": "Hello!",
            "type": "output_text"
          }
        ],
        "role": "assistant",
        "type": "message"
      }
    ],
    "status": "completed",
    "usage": {
      "input_tokens": 10,
      "output_tokens": 2,
      "total_tokens": 12
    }
  },
  "upstream_request": {
    "messages": [
      {
        "content": "hi",
        "role": "user"
      }
    ],
    "model": "gpt-4o"
  }
}
