tests/snapshots/responses_test__responses_inbound_tool_call_stream_closes_function_call.snap
---
source: tests/responses_test.rs
expression: frames
---
[
  {
    "event": "response.created",
    "data": {
      "response": {
        "id": "chatcmpl-9",
        "model": "gpt-4o",
        "object": "response",
        "status": "in_progress"
      },
      "type": "response.created"
    }
  },
  {
    "event": "response.output_item.added",
    "data": {
      "item": {
        "content": [],
        "id": "0",
        "role": "assistant",
        "type": "message"
      },
      "output_index": 0,
      "type": "response.output_item.added"
    }
  },
  {
    "event": "response.content_part.added",
    "data": {
      "content_index": 0,
      "item_id": "0",
      "output_index": 0,
      "part": {
        "annotations": [],
        "text": "",
        "type": "output_text"
      },
      "type": "response.content_part.added"
    }
  },
  {
    "event": "response.output_text.delta",
    "data": {
      "content_index": 0,
      "delta": "Let me check.",
      "item_id": "0",
      "output_index": 0,
      "type": "response.output_text.delta"
    }
  },
  {
    "event": "response.output_item.added",
    "data": {
      "item": {
        "arguments": "",
        "call_id": "call_1",
        "id": "fc_call_1",
        "name": "get_weather",
        "type": "function_call"
      },
      "output_index": 1,
      "type": "response.output_item.added"
    }
  },
  {
    "event": "response.function_call_arguments.delta",
    "data": {
      "delta": "{\"city\":\"SF\"}",
      "item_id": "fc_call_1",
      "output_index": 1,
      "type": "response.function_call_arguments.delta"
    }
  },
  {
    "event": "response.output_text.done",
    "data": {
      "content_index": 0,
      "item_id": "0",
      "output_index": 0,
      "text": "Let me check.",
      "type": "response.output_text.done"
    }
  },
  {
    "event": "response.content_part.done",
    "data": {
      "content_index": 0,
      "item_id": "0",
      "output_index": 0,
      "part": {
        "annotations": [],
        "text": "Let me check.",
        "type": "output_text"
      },
      "type": "response.content_part.done"
    }
  },
  {
    "event": "response.output_item.done",
    "data": {
      "item": {
        "content": [
          {
            "annotations": [],
            "text": "Let me check.",
            "type": "output_text"
          }
        ],
        "id": "0",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      },
      "output_index": 0,
      "type": "response.output_item.done"
    }
  },
  {
    "event": "response.output_item.done",
    "data": {
      "item": {
        "arguments": "{\"city\":\"SF\"}",
        "call_id": "call_1",
        "id": "fc_call_1",
        "name": "get_weather",
        "type": "function_call"
      },
      "output_index": 1,
      "type": "response.output_item.done"
    }
  },
  {
    "event": "response.completed",
    "data": {
      "response": {
        "id": "chatcmpl-9",
        "model": "gpt-4o",
        "object": "response",
        "output": [
          {
            "content": [
              {
                "annotations": [],
                "text": "Let me check.",
                "type": "output_text"
              }
            ],
            "id": "0",
            "role": "assistant",
            "status": "completed",
            "type": "message"
          },
          {
            "arguments": "{\"city\":\"SF\"}",
            "call_id": "call_1",
            "id": "fc_call_1",
            "name": "get_weather",
            "type": "function_call"
          }
        ],
        "status": "completed",
        "usage": {
          "input_tokens": 10,
          "output_tokens": 2,
          "total_tokens": 12
        }
      },
      "type": "response.completed"
    }
  }
]
